--- a/index.html
+++ b/index.html
@@ -113,15 +113,7 @@
                                 About
                             </h1>
                             <p class="lg:text-center">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Reprehenderit impedit
-                                explicabo, molestias itaque molestiae rerum
-                                deserunt adipisci dolores rem dolore. Hic error
-                                maiores numquam reprehenderit eveniet aut quas
-                                tenetur aperiam ab iusto ducimus voluptas, iste
-                                ipsa officiis. Incidunt blanditiis nesciunt in
-                                distinctio tenetur perspiciatis praesentium,
-                                mollitia repellat corrupti voluptatum nobis.
+                                I'm a Full Stack Developer from India. Technology is something that fascinates me with what it has and what it can do, it is something that drives me to learn more about it. More than anything else, I enjoy coding because I feel it keeps me the closest to technology I could possibly be.
                             </p>
                         </div>
 
@@ -153,9 +145,7 @@
                                     Jun 2021 - Aug 2021
                                 </h1>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur,
-                                    adipisicing elit. Sint at ea illum
-                                    laboriosam harum. Amet!
+                                    Contributing to a Flutter App to facilitate communication among members of a federation, mainly in the backend department. Major contribution in creating the database schema and handling API Endpoints in Nest.js
                                 </p>
                             </div>
                             <div id="experience-two" class="py-2">
@@ -173,10 +163,7 @@
                                     Jun 2020 - Sep 2020
                                 </h1>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Fuga voluptate eaque,
-                                    tempore temporibus odio aliquam incidunt a
-                                    impedit? Fugit, facere.
+                                    Reporting the latest Free Fire events and covering key highlights of important games in the Indian contingent.
                                 </p>
                             </div>
                         </div>
@@ -206,7 +193,7 @@
                                     2019 - 2023 | Bachelor of Engineering in IT
                                 </h1>
                                 <p class="text-[1.1rem] font-semibold my-2">
-                                    CGPI 8.0
+                                    CGPI 9.35
                                 </p>
                             </div>
                             <div id="education-two" class="py-2">
@@ -271,10 +258,7 @@
                                     API
                                 </h1>
                                 <p>
-                                    Lorem ipsum dolor, sit amet consectetur
-                                    adipisicing elit. Amet maxime alias
-                                    praesentium autem voluptatibus unde qui
-                                    repudiandae tempore, accusamus esse.
+                                    A video streaming service to provide curated educational content for e-learning. Ranking of Videos based on User Preferences made using Next.js, Supabase and with the help of YouTube API v3.
                                 </p>
                             </div>
                             <div
@@ -309,10 +293,7 @@
                                     Sep 2021 | Next.js, TailwindCSS, Husky
                                 </h1>
                                 <p>
-                                    Lorem ipsum dolor, sit amet consectetur
-                                    adipisicing elit. Amet maxime alias
-                                    praesentium autem voluptatibus unde qui
-                                    repudiandae tempore, accusamus esse.
+                                    A Blog website that uses Next.js SSG (Static Site Generation) to generate views styled by TailwindCSS and paths for the latest blogs with the help of its API hosted on Vercel Serverless, cached locally using the Husky pre-commit hook.
                                 </p>
                             </div>
                             <div id="project-three" class="py-2">
@@ -344,10 +325,7 @@
                                     Mar 2021 | Python Flask, MySQL
                                 </h1>
                                 <p>
-                                    Lorem ipsum dolor, sit amet consectetur
-                                    adipisicing elit. Amet maxime alias
-                                    praesentium autem voluptatibus unde qui
-                                    repudiandae tempore, accusamus esse.
+                                    An Application to efficiently create and manage online multiple-choice and descriptive tests along with student progress monitoring. Can automatically create MCQ based tests across multiple subjects with the help of Sanfoundry.
                                 </p>
                             </div>
                         </div>
